TCM-79 - Fix product box is not aligned

--- a/Resources/app/storefront/src/scss/component/_cms-block.scss
+++ b/Resources/app/storefront/src/scss/component/_cms-block.scss
@@ -41,6 +41,10 @@
     }
 }
 
+.cms-block-container-row {
+    align-items: flex-start;
+}
+
 .cms-block-product-three-column {
     .cms-block-container-row {
         > * {
